--- a/Styles.css
+++ b/Styles.css
@@ -246,6 +246,7 @@ header{
 
 .intro__img {
   box-shadow: var(--bs);
+  
 }
 
 @media (min-width: 600px) {
@@ -375,11 +376,16 @@ header{
 }
 
 .portfolio__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: var(--clr-accent);
   overflow: hidden;
 }
 
 .portfolio__img {
+  height: 100%;
+  max-width: 500px;
   transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
 }
 
@@ -393,6 +399,9 @@ header{
   transform: scale(1.2);
   opacity: 0.5;
 }
+/* .coming-soon{
+  height: 100%;
+} */
 
 /* footer */
 
@@ -442,11 +451,39 @@ header{
 
 .portfolio-item-individual{
   padding: 0 2em 2em;
-  max-width: 1000px;
+  max-width: 100%;
   max-width: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .portfolio-item-individual p {
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.project__img{
+  height: 100%;
+}
+
+.hosted__btn--div{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hosted__btn{
+  background-color: var(--clr-accent);
+  border: none;
+  padding: 1em;
+  border-radius: 10px;
+  text-decoration: none;
+  color: var(--clr-light);
+  font-weight: var(--fw-bold);
+}
+.hosted__btn:hover{
+  background-color: var(--clr-dark);
+  color: var(--clr-light);
 }
