--- a/Styles.css
+++ b/Styles.css
@@ -381,6 +381,7 @@ header{
   align-items: center;
   background: var(--clr-accent);
   overflow: hidden;
+  border: 3px solid var(--clr-dark);
 }
 
 .portfolio__img {
